# helios

./: .gitignore  .gitmodules  .mcp.json.example  ARCH.md  CLAUDE.md  DISPLAY.md  DISPLAY_WAY_FORWARD_2026_06_07.md  HOST.md  ICD.md  KMD.md  LOOKING_GLASS_HELIOS_2026_06_08.md  OVERVIEW.md  PHASE7_DISPLAY_HANDOVER.md  README.md  SYSTEM_CLASS_REFOCUS_2026_06_07.md  TOOLCHAIN.md  TRANSPORT.md
.claude/memory/: system-class-refocus-2026-06-07.md
.github/workflows/: package.yml
docs/: HARDENING.md  HOST.md  ICD.md  KMD.md  LOOKING_GLASS.md  TOOLCHAIN.md  TRANSPORT.md
docs/archive/: CODE43_HANDOFF_FOR_CODEX.md  DISPLAY.md  DISPLAY_WAY_FORWARD_2026_06_07.md  PHASE4E_ASYNC_HANDOVER.md  PHASE5_HANDOVER.md  PHASE7_DISPLAY_HANDOVER.md
docs/decisions/: SYSTEM_CLASS_REFOCUS_2026_06_07.md
icd/: PHASE4E_ASYNC_HANDOVER.md  PHASE5_HANDOVER.md  PHASE6_WSI_HANDOVER.md
icd/win-build/: README.md  clang-cl-native.ini  helios_vk_coherent.c  helios_vk_dev.c  helios_vk_exec.c  helios_vk_leaky_exit.c  helios_vk_poll.c  helios_vk_present.c  helios_vk_smoke.c  helios_vk_wsi.c  helios_win_compat.h  lin_vk_exec.c  mingw-native.ini
kmd/: Cargo.toml  build.rs  helios_kmd.inx
kmd/src/: adapter.rs  diag.rs  dod.rs  dxgk.rs  error.rs  fence.rs  interrupt.rs  ioctl.rs  lib.rs  mapping.rs  pnp.rs  vidpn.rs  wdf.rs
kmd/src/virtio/: config.rs  gpu.rs  hal.rs  mod.rs
probe/: Cargo.toml
probe/src/: main.rs
protocol/: Cargo.toml
protocol/src/: escape.rs  ioctl.rs  lib.rs  virtio_gpu.rs
tools/: install-helios-icd.ps1  launch-doom-diagnostic.cmd  launch-helios-gtk.sh  win11-domain.new.xml
tools/package/: README.md  install.ps1  make-package.sh  uninstall.ps1
tools/win-mcp/src/: main.rs
