[package]
name = "helios_kmd"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Helios vGPU System-class KMDF function driver for virtio-gpu (VEN_1AF4&DEV_1050); exposes GUID_DEVINTERFACE_HELIOS for the Venus IOCTL channel."

[lib]
crate-type = ["cdylib"]

# windows-drivers-rs driver model. KMDF function driver (System class) — we let
# the WDF loader bind us to the PCI FDO; no WDM DDI table, no dxgkrnl.
# KMDF 1.33 = WDK 10.0.26100 / Win11 24H2 (see ARCH.md §1).
[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[dependencies]
# windows-drivers-rs family — coherent set published 2025-11-14.
wdk = "0.4"
wdk-sys = "0.5"
wdk-alloc = "0.4"
wdk-panic = "0.4"
# Shared wire-format definitions (no_std), so virtio-gpu structs + the IOCTL
# protocol match the ICD byte-for-byte.
helios_protocol = { path = "../protocol" }
# no_std; used to (de)serialize helios_protocol command structs (Pod) into the
# DMA scratch buffers and IOCTL buffers. default-features=false keeps it
# std-free for the kernel target.
bytemuck = { version = "1", default-features = false, features = ["derive"] }
# Maintained no_std virtio transport. We implement its Hal + ConfigurationAccess
# over WDK primitives (see virtio/hal.rs, virtio/config.rs) and drive a raw
# VirtQueue with helios_protocol commands, skipping its built-in 2D GPU driver.
virtio-drivers = "0.13"

[build-dependencies]
# Configures downstream linking against the WDK (resolves ntoskrnl, WdfLdr, the
# KMDF stub import lib, etc.). No custom bindgen — all WDF/NT bindings come from
# wdk-sys, and WDF functions are called through call_unsafe_wdf_function_binding!.
wdk-build = "0.5"

[profile.dev]
panic = "abort"
lto = "thin"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
