[package]
name = "helios_kmd"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Helios vGPU WDDM Display-Only Driver (DOD) for virtio-gpu (VEN_1AF4&DEV_1050); owns the scanout + carries the Venus ops over DxgkDdiEscape (DISPLAY.md)."

[lib]
crate-type = ["cdylib"]

# windows-drivers-rs driver model. WDM = we register the DOD DDI table ourselves
# (via DxgkInitializeDisplayOnlyDriver from displib.lib), NOT through KMDF — the
# Phase-7 display pivot: System-class KMDF -> WDDM Display-Only miniport
# (DISPLAY.md §3). dxgkrnl drives the device lifecycle through our DDIs.
[package.metadata.wdk.driver-model]
driver-type = "WDM"

[dependencies]
# windows-drivers-rs family — coherent set published 2025-11-14.
wdk = "0.4"
wdk-sys = "0.5"
wdk-alloc = "0.4"
wdk-panic = "0.4"
# Shared wire-format definitions (no_std), so virtio-gpu structs + the IOCTL
# protocol match the ICD byte-for-byte.
helios_protocol = { path = "../protocol" }
# no_std; used to (de)serialize helios_protocol command structs (Pod) into the
# DMA scratch buffers and IOCTL buffers. default-features=false keeps it
# std-free for the kernel target.
bytemuck = { version = "1", default-features = false, features = ["derive"] }
# Maintained no_std virtio transport. We implement its Hal + ConfigurationAccess
# over WDK primitives (see virtio/hal.rs, virtio/config.rs) and drive a raw
# VirtQueue with helios_protocol commands, skipping its built-in 2D GPU driver.
virtio-drivers = "0.13"

[build-dependencies]
# Configures downstream linking against the WDK (resolves ntoskrnl, hal, displib,
# etc.) for a WDM binary.
wdk-build = "0.5"
# wdk-sys has no display ApiSubset, so build.rs runs bindgen over dispmprt.h +
# d3dkmddi.h to generate the DOD DDIs (KMDDOD_INITIALIZATION_DATA, DXGKARG_*,
# DXGKRNL_INTERFACE, DxgkInitializeDisplayOnlyDriver, ...). MUST match the bindgen
# version wdk-build uses (0.71) so its BuilderExt::wdk_default applies to the same
# bindgen::Builder type. See build.rs.
bindgen = "0.71"

[profile.dev]
panic = "abort"
lto = "thin"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
