[package]
name = "helios_probe"
version = "0.1.0"
edition = "2021"
description = "Phase 3 smoke test: open GUID_DEVINTERFACE_HELIOS and round-trip the Venus control IOCTLs against the live KMD."

[[bin]]
name = "helios_probe"
path = "src/main.rs"

[dependencies]
# Shared wire layouts: the IOCTL codes, the device-interface GUID fields, and the
# op structs. Guarantees the probe speaks exactly what the KMD expects.
helios_protocol = { path = "../protocol" }

[profile.release]
opt-level = 2
